[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dify-client = { path = "../dify-sdk-rs/dify-client" }
dify-client = "0.3"
axum = { version = "0.7", features = ["multipart", "macros"] }
anyhow = "1"
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
serde = "1"
serde_json = "1"
serde_repr = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
num_cpus = "1"
strum = { version = "0.26", features = ["derive"] }
futures = "0.3"
tokio-stream = "0.1"
