[package]
name = "dify-openai-apis"
version = "0.1.3"
edition = "2021"
description = "OpenAI-compatible APIs for Dify platform services"
license = "Apache-2.0"
repository = "https://github.com/rming/dify-openai-apis"
homepage = "https://github.com/rming/dify-openai-apis"
documentation = "https://docs.rs/dify-openai-apis"
categories = ["command-line-utilities", "web-programming::http-server"]
keywords = ["dify", "openai", "llm", "api", "server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dify-client = { version = "0.3", default-features = false, features = [
    "rustls-tls",
] }
axum = { version = "0.7", features = ["multipart", "macros"] }
anyhow = "1"
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
serde = "1"
serde_json = "1"
serde_repr = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
num_cpus = "1"
strum = { version = "0.26", features = ["derive"] }
futures = "0.3"
tokio-stream = "0.1"
tower-http = { version = "0.5", features = ["cors"] }
tower = "0.4"
